zephyr_library()
target_link_libraries(                                        drivers__clock_control drivers)
target_sources_ifdef(CONFIG_CLOCK_CONTROL_NRF5                drivers__clock_control PRIVATE nrf5_power_clock.c)
target_sources_ifdef(CONFIG_CLOCK_CONTROL_QUARK_SE            drivers__clock_control PRIVATE quark_se_clock_control.c)
target_sources_ifdef(CONFIG_CLOCK_CONTROL_STM32F10X           drivers__clock_control PRIVATE stm32f10x_clock.c)
target_sources_ifdef(CONFIG_CLOCK_CONTROL_STM32F10X_CONN_LINE drivers__clock_control PRIVATE stm32f107xx_clock.c)
target_sources_ifdef(CONFIG_CLOCK_CONTROL_STM32F3X            drivers__clock_control PRIVATE stm32f3x_clock.c)
target_sources_ifdef(CONFIG_CLOCK_CONTROL_STM32F4X            drivers__clock_control PRIVATE stm32f4x_clock.c)
target_sources_ifdef(CONFIG_CLOCK_CONTROL_STM32L4X            drivers__clock_control PRIVATE stm32l4x_clock.c)
target_sources_ifdef(CONFIG_CLOCK_CONTROL_BEETLE              drivers__clock_control PRIVATE beetle_clock_control.c)
